syntax = "proto3";

package solver;

message SolveRequest {
  int64 key_start = 1;
  int64 key_end = 2;
  int64 step = 3;
}

message SolveResponse {
  int64 solution = 1;
}

service SolverService {
  rpc Solve(SolveRequest) returns (SolveResponse) {};
}
